# python-fastapi-sqlchemy-htmx-tailwind

./: .env.example  .gitignore  DATABASE.md  DEVELOPMENT.md  Dockerfile  README.md  SCAFFOLDING.md  docker-compose.yml  main.py  pyproject.toml  tailwind.config.js
app/: __init__.py  main.py
app/api/: deps.py
app/api/v1/: routes.py
app/core/: config.py
app/db/: connection.py  queries.py  session.py
app/db/queries/: users.sql
app/db/schema/: 001_init.sql
app/models/: product.py  user.py
app/static/css/: input.css
app/templates/: base.html  index.html
app/templates/partials/: search_results.html  user_detail.html
scripts/: dev.sh  setup-tailwind.sh  watch-css.sh
